[gd_scene load_steps=15 format=2]

[ext_resource path="res://main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/black.png" type="Texture" id=2]
[ext_resource path="res://assets/images/botao_jogar0.png" type="Texture" id=3]
[ext_resource path="res://assets/images/botao_jogar1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/botao_opcoes0.png" type="Texture" id=5]
[ext_resource path="res://assets/images/botao_opcoes1.png" type="Texture" id=6]
[ext_resource path="res://assets/images/botao_creditos0.png" type="Texture" id=7]
[ext_resource path="res://assets/images/botao_creditos1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/botao_sair0.png" type="Texture" id=9]
[ext_resource path="res://assets/images/botao_sair1.png" type="Texture" id=10]
[ext_resource path="res://assets/audio/Full of memories.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/images/light_inside_logo0.png" type="Texture" id=12]
[ext_resource path="res://assets/images/light_inside_logo1.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.101961 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1920, 1080 )
texture = ExtResource( 2 )
centered = false

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 67.4764
margin_top = 600.069
margin_right = 287.476
margin_bottom = 668.069
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = 68.5147
margin_top = 716.393
margin_right = 329.515
margin_bottom = 784.393
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 66.1878
margin_top = 833.184
margin_right = 386.188
margin_bottom = 901.184
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 68.4836
margin_top = 950.427
margin_right = 388.484
margin_bottom = 1018.43
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="BackgroundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 969.451, 143.575 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="LogoShine" type="Sprite" parent="Logo"]
modulate = Color( 1, 1, 1, 0.265227 )
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Logo/LogoShine"]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="OptionsScreen" type="Sprite" parent="."]
visible = false
